# termChat

./: .gitignore  LICENSE  README.md  pyproject.toml
termchat/: config.yaml  main-ng.py  main.py
termchat/modules/: ollama_client.py  render_utils.py
